add translation in admin menu

--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -3,6 +3,7 @@ cms:
         label: Gestion des pages
         table: Liste des pages
         form: Gestion des formulaires
+        add_page: Ajouter une page
 
     state:
         draft: Brouillon
