debug cms module

--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -30,3 +30,6 @@ cms:
         list: Liste des alertes
         title: Titre
         add_button: Ajouter une alerte
+
+form:
+    sent: Formulaire envoyé
